# Market-Analysis

./: .env.example  .gitattributes  .gitignore  Makefile  PROJECT_PLAN.md  README.md  _gen_test_data.py  _run_tests.py  pyproject.toml
.hermes/plans/: 2026-05-18_multi-region-expansion.md  2026-05-18_synthesis-enhancement.md
configs/: clustering.yaml
configs/clustering/: HK.yaml  JP.yaml  TW.yaml  US.yaml
docs/: scraping_ethics.md  source_coverage.md
eval/products/: dcard_tw.json  iphone_us.json  mtr_mobile_hk.json  tabelog_jp.json  whatsapp_hk.json
outputs/mtr_mobile/: journey__Frustrated_Daily_Commuter.json  persona__Frustrated_Daily_Commuter.json
scripts/: MarketAnalytics.spec  auto_improve.py  build_windows.bat  demo2.py  demo_pipeline.py  heartbeat.py  hk_deep_scrape.py  overnight_pipeline.py  scrape_delta.py  task_queue.json  win_launcher.py
src/: cli.py  cli_analyze.py  cli_doctor.py  cli_eval.py  cli_export.py  cli_render.py  config.py  util_atomic.py  util_stdio.py
src/api/: app.py  cache.py  events.py  models.py  pipeline.py  runs.py
src/eval/: __init__.py  runner.py
src/export/: pdf.py
src/lang/: __init__.py  base.py  en.py  ja.py  zh.py
src/pipeline/: __init__.py  cluster.py  cluster_diag.py  embed.py  models.py  synthesize.py
src/regions/: __init__.py  registry.py
src/render/: __init__.py  bundle.py  core.py  journey_map.py  persona_card.py
src/schemas/: __init__.py  cluster.py  enums.py  raw.py  synthesis.py
src/scrape/: __init__.py  app_store_hk.py  app_store_jp.py  app_store_tw.py  app_store_us.py  base.py  cosme.py  dcard.py  discuss_hk.py  doctor.py  five_ch.py  google_play_hk.py  google_play_jp.py  google_play_tw.py  google_play_us.py  hk01.py  lihkg.py  medium.py  medium_hk.py  medium_jp.py  medium_tw.py  medium_us.py  mobile01.py  openrice.py  ptt.py  quora.py  quora_hk.py  quora_jp.py  quora_tw.py  quora_us.py  reddit_old.py  registry.py  tabelog.py  trustpilot.py  yahoo_japan_reviews.py  yahoo_news_jp.py  yahoo_news_tw.py  yahoo_news_us.py  yelp_html.py  youtube_html.py
tests/: conftest.py  test_analyze.py  test_doctor.py  test_export.py  test_overnight_pipeline.py  test_slugify_windows_reserved.py  test_util_atomic.py  test_util_stdio.py
tests/api/: test_regions_endpoint.py  test_scrape_failure_isolation.py
tests/eval/: test_cli.py  test_runner.py
tests/fixtures/: itunes_reviews_page1.json  itunes_search.json
tests/integration/: test_app_store_hk_live.py  test_discuss_hk_live.py  test_hk01_live.py  test_medium_hk_live.py  test_quora_hk_live.py  test_youtube_html_live.py
tests/pipeline/: test_cluster_diag.py  test_coverage_tier.py  test_embed_cache.py  test_pipeline.py  test_synthesize.py  test_temporal.py  test_vss_smoke.py
tests/regions/: test_registry.py
tests/render/: conftest.py  test_bundle.py  test_core.py  test_render.py  test_render_journey.py  test_render_persona.py
tests/scrape/: test_app_store_hk.py  (+27 more)
ui/: .gitignore  next.config.ts  package-lock.json  package.json
(+90 files in other folders)
