[project]
name = "market-analytics"
version = "0.1.0"
description = "Personas and user-journey maps from public web data."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "httpx>=0.27",
    "typer>=0.12",
    "structlog>=24.1",
    "tenacity>=8.5",
    "py3langid>=0.3",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
]

[project.scripts]
mkt = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
