[project]
name = "market-analytics"
version = "0.1.0"
description = "Personas and user-journey maps from public web data."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "httpx>=0.27",
    "typer>=0.12",
    "structlog>=24.1",
    "tenacity>=8.5",
    "py3langid>=0.3",
    "beautifulsoup4>=4.12",
    "sentence-transformers>=3.0",
    "duckdb>=1.1",
    "umap-learn>=0.5",
    "hdbscan>=0.8",
    "scikit-learn>=1.5",
    "google-play-scraper>=1.2",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "fpdf2>=2.8",
    "jieba>=0.42",
    # Phase 2 scrapers + Phase 8 renderer share the Playwright base.
    "playwright>=1.40",
    # Phase 8 render templates (FastAPI already pulls Jinja2 transitively,
    # but the render layer should declare its own dependency).
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
]

[project.scripts]
mkt = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "slow: end-to-end render tests that drive Playwright (~30s)",
]
